deploy/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  namespace: net-sec-watch
spec:
  type: ClusterIP
  selector:
    app: opensearch
  ports:
    - name: https
      port: 9200
      targetPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: fluent-bit
  namespace: net-sec-watch
spec:
  type: LoadBalancer
  selector:
    app: fluent-bit
  ports:
    - name: metrics
      port: 2020
      targetPort: 2020
    - name: syslog-udp
      port: 514
      targetPort: 5514
      protocol: UDP
    - name: syslog-tcp
      port: 514
      targetPort: 5514
      protocol: TCP
    - name: syslog-tls
      port: 6514
      targetPort: 6514
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards
  namespace: net-sec-watch
spec:
  type: ClusterIP
  selector:
    app: opensearch-dashboards
  ports:
    - name: https
      port: 5601
      targetPort: 5601
